--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <div class="col-md-6 col-lg-5">
     <div class="login-box bg-white box-shadow border-radius-10">
       <div class="login-title">
-        <h2 class="text-center text-primary">Login To Crs</h2>
+        <h2 class="text-center text-primary">CRS PACD LOG</h2>
       </div>
       <form method="POST" action="/loginUser">
         <div class="input-group custom">
