--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -103,23 +103,25 @@
                 ><i class="fa fa-address-book-o" aria-hidden="true"></i> Number
                 of birth</label
               >
-              <select
-                class="form-control form-control-sm bg-secondary"
-                aria-label="Default select example"
-                name="birth"
-              >
-                <option value="0">0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-              </select>
+              <div style="width: 70px">
+                <select
+                  class="form-control form-control-sm bg-secondary"
+                  aria-label="Default select example"
+                  name="birth"
+                >
+                  <option value="0">0</option>
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                  <option value="6">6</option>
+                  <option value="7">7</option>
+                  <option value="8">8</option>
+                  <option value="9">9</option>
+                  <option value="10">10</option>
+                </select>
+              </div>
             </div>
 
             <div class="form-group col-12 col-md-3">
@@ -127,23 +129,25 @@
                 ><i class="fa fa-address-book" aria-hidden="true"></i> Number of
                 Death:</label
               >
-              <select
-                class="form-control form-control-sm bg-warning"
-                aria-label="Default select example"
-                name="death"
-              >
-                <option value="0">0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-              </select>
+              <div style="width: 70px">
+                <select
+                  class="form-control form-control-sm bg-warning"
+                  aria-label="Default select example"
+                  name="death"
+                >
+                  <option value="0">0</option>
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                  <option value="6">6</option>
+                  <option value="7">7</option>
+                  <option value="8">8</option>
+                  <option value="9">9</option>
+                  <option value="10">10</option>
+                </select>
+              </div>
             </div>
 
             <div class="form-group col-12 col-md-3">
@@ -151,23 +155,25 @@
                 ><i class="fa fa-life-ring" aria-hidden="true"></i> Number of
                 marriage:</label
               >
-              <select
-                class="form-control form-control-sm bg-danger"
-                aria-label="Default select example"
-                name="marriage"
-              >
-                <option value="0">0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-              </select>
+              <div style="width: 70px">
+                <select
+                  class="form-control form-control-sm bg-danger"
+                  aria-label="Default select example"
+                  name="marriage"
+                >
+                  <option value="0">0</option>
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                  <option value="6">6</option>
+                  <option value="7">7</option>
+                  <option value="8">8</option>
+                  <option value="9">9</option>
+                  <option value="10">10</option>
+                </select>
+              </div>
             </div>
 
             <div class="form-group col-12 col-md-3">
@@ -175,29 +181,32 @@
                 ><i class="fa fa-address-card" aria-hidden="true"></i> Number of
                 cenomar:</label
               >
-              <select
-                class="form-control form-control-sm bg-success"
-                aria-label="Default select example"
-                name="cenomar"
-              >
-                <option value="0">0</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-              </select>
+              <div style="width: 70px">
+                <select
+                  class="form-control form-control-sm bg-success"
+                  aria-label="Default select example"
+                  name="cenomar"
+                >
+                  <option value="0">0</option>
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                  <option value="6">6</option>
+                  <option value="7">7</option>
+                  <option value="8">8</option>
+                  <option value="9">9</option>
+                  <option value="10">10</option>
+                </select>
+              </div>
             </div>
           </div>
 
           <div class="w-100 d-flex justify-content-end align-items-end mt-3">
             <button type="submit" class="btn btn-secondary mb-3">
               <i class="fa fa-hand-pointer-o" aria-hidden="true"></i> add
+              priority
             </button>
           </div>
         </div>
@@ -285,14 +294,14 @@
               <i class="fa fa-refresh p-1" aria-hidden="true"></i> Refresh
             </a>
           </div>
-          <div class="col-6 col-sm-4 col-md-auto mb-2">
-            <a
-              href="/deleteAllPriority"
+          <div class="col-6 col-sm-4 col-md-auto mb-2" id="delAlPrio">
+            <button
+              onclick="deletePriorities()"
               class="btn btn-outline-danger btn-sm w-100"
             >
               <i class="fa fa-trash-o" aria-hidden="true"></i> Delete All
-              Priority
-            </a>
+              Priorities
+            </button>
           </div>
         </div>
       </div>
